@@ -137,6 +137,9 @@ ImGuiID     TableGetHeaderID(ImGuiTable* table, const char* column, int instance
 ImGuiID     TableGetHeaderID(ImGuiTable* table, int column_n, int instance_no = 0);
 void        TableDiscardInstanceAndSettings(ImGuiID table_id);
 
+// DrawData functions
+void        DrawDataVerifyMatchingBufferCount(ImDrawData* draw_data);
+
 //-----------------------------------------------------------------------------
 // Helper: maintain/calculate moving average
 //-----------------------------------------------------------------------------
