@@ -5,6 +5,9 @@ CHANGELOG
    Those changes are not all listed here.
 ** For a while this is going to ONLY INCLUDE BREAKING CHANGES.
 
+2023/08/15:
+- TestEngine: Added IO.CheckDrawDataIntegrity helper (mostly for use by test suite).
+
 2023/07/11:
 - TestEngine: Fixed an issue accessing tabs in a TabBar without scrolling policy.
 
